Bug 494452 - Resizing vertical panel length does not show handles (Wayland and X11)
Summary: Resizing vertical panel length does not show handles (Wayland and X11)
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Panel (other bugs)
Version First Reported In: 6.2.0
Platform: openSUSE Linux
: NOR normal
Target Milestone: 1.0
Assignee: Marco Martin
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-10-10 14:30 UTC by Cristiano Guadagnino
Modified: 2025-05-23 18:34 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.4.0
Sentry Crash Report:


Attachments
Vertical panel with height set to "custom" and resizing bar without handles (448.85 KB, image/png)
2024-10-10 14:30 UTC, Cristiano Guadagnino
Details
Panel resize with breeze light theme and missing handles (131.01 KB, image/png)
2024-10-10 20:53 UTC, Cristiano Guadagnino
Details
Left hand panel config (173.12 KB, image/jpeg)
2025-03-12 15:51 UTC, TraceyC
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Cristiano Guadagnino 2024-10-10 14:30:39 UTC
Created attachment 174631 [details]
Vertical panel with height set to "custom" and resizing bar without handles

SUMMARY
I am trying to resize a vertical panel's length (i.e. its height), but when I set height to "custom" the bar that appears does not have handles.

STEPS TO REPRODUCE
1. Create a vertical empty panel
2. Put some widgets on it
3. Hit "show panel configuration"
4. Set height to "Custom"

OBSERVED RESULT
The bar that appears does not have handles

EXPECTED RESULT
The bar that appears should have handles that let you resize the panel height

SOFTWARE/OS VERSIONS
Operating System: openSUSE Tumbleweed 20241007
KDE Plasma Version: 6.2.0
KDE Frameworks Version: 6.6.0
Qt Version: 6.7.3
Kernel Version: 6.11.2-1-default (64-bit)
Graphics Platform: Wayland

ADDITIONAL INFORMATION
1. I have seen reports that this problem applies only to Wayland.
2. As I'm using a dark theme, I though that maybe the handles were invisible, so I tried to blindly search for them by looking at the mouse cursor and moving the pointer across the entire length of the bar. This way I can actually find the center handle, but the "up" and "down" handles are nowhere to be found.
Comment 1 Nate Graham 2024-10-10 20:10:40 UTC
Hmm, works for me with my vertical panel.
Comment 2 Cristiano Guadagnino 2024-10-10 20:30:33 UTC
Not for me. Also, I'm not the only one... see for example this thread on Reddit: https://www.reddit.com/r/kde/comments/1bfihqt/unable_to_resize_the_panel_plasma_6/
Comment 3 Cristiano Guadagnino 2024-10-10 20:41:54 UTC
It may be related to the theme.
See this: https://forum.manjaro.org/t/panel-resizing-issue-with-plasma/155812
and this: https://forum.kde.org/viewtopic.php%3Ff=17&t=170404.html
Comment 4 Cristiano Guadagnino 2024-10-10 20:52:35 UTC
I tried several different themes, especially the standard breeze ones (light and dark), but I always get the same problem.
See new attachment.
Comment 5 Cristiano Guadagnino 2024-10-10 20:53:47 UTC
Created attachment 174654 [details]
Panel resize with breeze light theme and missing handles
Comment 6 TraceyC 2025-01-29 19:32:27 UTC
I was able to reproduce the bug on git-master

I tried to reproduce using Breeze Dark and one panel, vertical on the left.
I set it to custom height. I was not able to reproduce it with this configuration.

Then, I noticed in the latest screenshot that there's also a top panel
I added a default panel, positioned it on top, and now I see the bug with the left hand panel in edit mode
Comment 7 Niccolò Venerandi 2025-03-11 17:46:14 UTC
I have tried to reproduce this as described in various ways but with no luck. If this is still happening on master, can I see a video of it please?
Comment 8 Cristiano Guadagnino 2025-03-11 19:13:27 UTC
I still have the problem, but I'm not on master so I don't think my information is valuable.

Operating System: openSUSE Tumbleweed 20250307
KDE Plasma Version: 6.3.2
KDE Frameworks Version: 6.11.0
Qt Version: 6.8.2
Kernel Version: 6.13.5-1-default (64-bit)
Graphics Platform: Wayland
Processors: 12 × AMD Ryzen 5 3600 6-Core Processor
Memory: 31,3 GiB of RAM
Graphics Processor: AMD Radeon RX 550 / 550 Series
Comment 9 TraceyC 2025-03-12 15:50:18 UTC
This is still happening for me on git-master, with the Layan global theme as well

Setup:
Default panel at top
Panel fit to content at bottom
Panel on left side - custom size

Steps:
Enter config for the left hand panel
Set Height to Custom if it isn't already

Result: bar does not have handles at the top and bottom.
I'm attaching a screen shot
Comment 10 TraceyC 2025-03-12 15:51:34 UTC
Created attachment 179346 [details]
Left hand panel config

In Edit mode, panel config for the left hand panel
It should have handles at the top and bottom of the bar
Comment 11 Bug Janitor Service 2025-03-12 16:22:54 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/5312
Comment 12 Marco Martin 2025-05-22 13:02:13 UTC
it's pretty easy to reproduce, it needs an horizontal panel *and* a vertical panel, then very probably the handles won't be visible.

in that case, the length of the handle window is limited by the same amount of the panel, but if the size is set to be 100%, the handles will be there but outside the visible area of the window. their possible position  should probably be constrained
Comment 13 Bug Janitor Service 2025-05-22 13:39:22 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/3014
Comment 14 Marco Martin 2025-05-22 14:44:26 UTC
Git commit c27dd27bffec16a214db35a5e192ca98a558dd5f by Marco Martin.
Committed on 22/05/2025 at 13:43.
Pushed by mart into branch 'master'.

Make sure the handles never go out of view

when the panel custom size ruler gets resized due to other panels
reserving space, the handles might end up in a position which goes
out of the view of just few pixels, but makes the handles completely
non iteractible.
when the maximum possible size of the panel is less because another
panel is taking some reserved space, the handles should reflect that
and never go out of bounds

M  +14   -10   desktoppackage/contents/configuration/panelconfiguration/SliderHandle.qml

https://invent.kde.org/plasma/plasma-desktop/-/commit/c27dd27bffec16a214db35a5e192ca98a558dd5f
Comment 15 Marco Martin 2025-05-23 07:07:40 UTC
Git commit 71081728677ec020aa3066a307040afa98a4d285 by Marco Martin.
Committed on 23/05/2025 at 07:07.
Pushed by mart into branch 'Plasma/6.4'.

Make sure the handles never go out of view

when the panel custom size ruler gets resized due to other panels
reserving space, the handles might end up in a position which goes
out of the view of just few pixels, but makes the handles completely
non iteractible.
when the maximum possible size of the panel is less because another
panel is taking some reserved space, the handles should reflect that
and never go out of bounds


(cherry picked from commit c27dd27bffec16a214db35a5e192ca98a558dd5f)

c27dd27b Make sure the handles never go out of view

Co-authored-by: Marco Martin <notmart@gmail.com>

M  +14   -10   desktoppackage/contents/configuration/panelconfiguration/SliderHandle.qml

https://invent.kde.org/plasma/plasma-desktop/-/commit/71081728677ec020aa3066a307040afa98a4d285