Allow panel rulers to cover entire screen width/height

Previously, panel rulers were constrained by the current screen
geometry. This led to panel rulers with indicators out of
bounds, and it made impossible to achieve certain setups where
a panel would be resized beyond the exclusive zone of another.

BUG:494452